--- a/index.html
+++ b/index.html
@@ -109,9 +109,11 @@
     <main>
         <div class="profile">
             <h1>HELLO, I'M OMAGHOMI TEMI</h1>
-            <P>I'm a junior web developer with a passion for building innovation solutions. <br>Although i'm still gaining experience,i'm eager to learn and grow. When i'm not coding, you can find me exploring the world of community-building,who craft enaging experience that bring people together. <br>let's connect and see how can we create something amazing!</P>
+            <P>I'm a junior web developer with a passion for building innovation solutions. <br>Although i'm still gaining experience,i'm eager to learn and grow. 
+                When i'm not coding, you can find me exploring the world of community-building,who craft enaging experience that bring people together. <br>
+                let's connect and see how can we create something amazing!</P>
             
-            <img src="images/profile.JPEG" alt="">
+            <img src="profile.png" alt="">
         </div>
         <div class="projects">
             <ul>
