--- a/aboutme.html
+++ b/aboutme.html
@@ -97,7 +97,7 @@
         <div class="profile">
             <h1>OMAGHOMI TEMI</h1>
             
-            <img src="images/circle.JPEG" alt="">
+            <img src="circle.png" alt="">
 
         </div>
         <div class="about">
