--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         }
         @media (max-width:480px) {
               header nav ul{
-                flex-direction: column;
+                display:flex;
             }
             header nav ul li{
                 margin-right: 0;
